2006-05-22  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp (watcharray): Add `array' parameter.  Rename
	`type' parameter to `op' and update all uses in the proc.
	(watchvar): Add `ignore' parameter for scalar variables.
	Likewise, rename `type' to `op' and update throughout the proc.
	
	* runtest.exp: Use switch, not case.
	* lib/framework.exp (clone_output): Likewise.
	(clear_xfail): Likewise.
	(clear_kfail): Likewise.
	(set_warning_threshold): Make warning_threshold global.
	(get_warning_threshold): Likewise.
	* lib/libgloss.exp (process_multilib_options): Use switch, not
	case.
	* lib/remote.exp (local_exec): Only run global errorInfo once.
	(standard_upload): Fix error in variable use ($file -> $srcfile).
	* lib/utils.exp (grep): Use switch, not case.
	(slay): Fix mismatched bracket.

	* lib/debugger.exp (watcharray): Use switch, not case.
	(watchvar): Likewise.
	(bt): Add an explanatory comment.

2006-04-03  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp, lib/dejagnu.exp, lib/dg.exp,
	lib/framework.exp, lib/libgloss.exp, lib/remote.exp,
	lib/rlogin.exp, lib/target.exp, lib/telnet.exp: Formatting.

2006-01-02  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Set version to 1.4.99.
	* configure: Regenerate.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Add runtest_file_p.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (frame_version): Set to 1.4.99.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* dejagnu.h: Update copyright notice.  Use C-style /* .. */
	comments for portability with ISO C compilers.
	* testsuite/libdejagnu/unit.cc: Likewise, update copyright notice.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Update copyright notice.
	* example/calc/testsuite/calc.test/calc.exp: Likewise.
	* example/calc/testsuite/config/unix.exp: Likewise.
	* testsuite/libdejagnu/tunit.exp: Likewise.
	* testsuite/runtest.all/libs.exp: Likewise.
	* testsuite/runtest.all/options.exp: Likewise.